<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.example.dolgan.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.dolgan.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.dolgan.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_meals"
        android:name="com.example.dolgan.ui.meals.MealsFragment"
        android:label="@string/menu_meals"
        tools:layout="@layout/fragment_meals" />
    <fragment
        android:id="@+id/nav_folklore"
        android:name="com.example.dolgan.ui.folklore.FolkloreFragment"
        android:label="@string/menu_folklore"
        tools:layout="@layout/fragment_folklore" />
    <fragment
        android:id="@+id/nav_services"
        android:name="com.example.dolgan.ui.services.ServicesFragment"
        android:label="@string/menu_services"
        tools:layout="@layout/fragment_services" />
    <fragment
        android:id="@+id/nav_ourTeam"
        android:name="com.example.dolgan.ui.ourteam.TeamFragment"
        android:label="@string/menu_ourTeam"
        tools:layout="@layout/fragment_team" />
    <fragment
        android:id="@+id/nav_reviews"
        android:name="com.example.dolgan.ui.reviews.ReviewsFragment"
        android:label="@string/menu_reviews"
        tools:layout="@layout/fragment_reviews" />
    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.example.dolgan.ui.contacts.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_contacts" />
</navigation>